--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </h1>
 
         <img id="bfimage" src="assets/images/bfimg.png" alt="black friday sale image">
-        <h2 id="call-to-action">Se inscreva e aproveite nossas MELHORES ofertas!</h1>
+        <h2 id="call-to-action">Cadastre-se e aproveite nossas MELHORES ofertas!</h1>
     </section>
 
     <section class="section-container background-section-two"> 
-        <div class="card-container">
+        <div class="f-container">
                 <div id="form">
                     <div class="input">
                         <label for="nome"> NOME:</label>
@@ -39,6 +39,82 @@
 
                 </div>
         </div>          
+
+        <div class="card-collection">
+            <div id="carousel-actions">
+                <div id="carousel-lftbtn">
+                    <p><</p>
+                </div>
+                <div id="carousel-rgtbtn">
+                    <p>></p>
+                </div>
+            </div>
+            <div class="card card-focus1">
+                <img class="card-img" src="assets/images/notebook-sale.jpg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+            
+            <div class="card card-focus2">
+                <img class="card-img" src="assets/images/shirt-sale.jpg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="assets/images/smartphone-sale.jpg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="assets/images/smartwatch-sale.jpg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="assets/images/rubik-sale.jpeg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="assets/images/notebook-sale.jpg" alt="product">
+                <div class="card-description">
+                    <h4>R$123,00 <span style="font-size: 13px;">x12</span></h4>
+                    <p>R$1476,00 - Frete grátis</p> 
+                </div>
+                <div class="card-hidden-description">
+                    <p style="font-size: 13px;">surge vir fortis i natam victoriam surge vir fortis i natam victoriam surge vir fortis i natam victoriam</p> 
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
